# Hermes

./: .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  CMakePresets.json  README.md  calc.py  run_tests.sh
cmake/: add_hermes_grammar.cmake  hermesConfig.cmake.in
docs/: README.md  cmake.md  grammar-files.md  regex.md
hermes/: ebnf_grammer.py  first_and_follow.py  ielr_generator.py  lalr1_automata.py  main.py
hermes-ebnf-language-support/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  test.hm
hermes-ebnf-language-support/syntaxes/: ebnf.tmLanguage.json
hermes_cpp/inc/hermes/: _defaults.h  errors.h  parseTable.h  parser.h  scanner.h  stackItem.h
hermes_cpp/inc/hermes/internal/: bind-hermes-py.h  grammar.h  scanner.h
hermes_cpp/inc/hermes/internal/regex/: match.h  node.h  regex.h  rparser.h
hermes_cpp/inc/hermes/regex/: match.h  node.h  regex.h  rparser.h
hermes_cpp/src/: bind-hermes-py.cpp  grammar.cpp  parseTable.cpp  parseTableImpl.cpp  parser.cpp  scanner.cpp
hermes_cpp/src/regex/: node.cpp  node_strs.cpp  regex.cpp  rparser.cpp
hermes_gen/: __main__.py  code_preproc.py  consts.py  directives.py  ebnf_grammar.py  ebnf_grammer.py  errors.py  first_and_follow.py  grammar.py  hermes_logs.py  ielr_generator.py  lalr1_automata.py  main.py  parseTable.py
hermes_gen/counterexample/: configurations.py  conflict.py  costs.py  counterexample.py  counterexampleGen.py  derivation.py  orderedSet.py  stateItem.py  transitionTable.py  utils.py
hermes_gen/writers/: hermesHeader.py  loader.py  parseTable.py  pybind.py  table.py  utils.py
hermes_gen/writers/cpp/: generate.py  hermesHeader.py  table.py  utils.py
hermes_gen/writers/python/: generate.py
hermes_py/: parser.py
tests/: CMakeLists.txt  test_1_preprocessing.py  test_2_buildGrammar.py  test_3_FandF.py  test_4_LR1Closure.py  test_5_parseTable.py
tests/cpp_tests/: calculator.cpp  regex_test_utils.cpp  regex_test_utils.h  test_re_alternation.cpp  test_re_bad_re.cpp  test_re_char_class.cpp  test_re_escapes.cpp  test_re_lookahead.cpp  test_re_rep_bracket.cpp  test_re_rep_plus.cpp  test_re_rep_question.cpp  test_re_rep_star.cpp  test_re_tricky.cpp  test_regex.cpp
tests/grammars/: FandFtest1.ebnf  FandFtest1.hm  FandFtest2.ebnf  G10.ebnf  G10.hm  LALR1Test.ebnf  LALR1Test.hm  calculator.ebnf  calculator.hm  calculator_py.hm  epsilon.ebnf  epsilon.hm  epsilon2.drawio  epsilon2.hm  epsilon3.hm  imported.hm  test.ebnf  test.hm
tests/grammars/conflicts/: ambiguous-shift-reduce.drawio  ambiguous-shift-reduce.hm  ifelse.hm  unambiguous-shift-reduce.drawio  unambiguous-shift-reduce.hm
tests/grammars/invalid_files/: bad1.hm  import.hm
tests/grammars/invalid_files/subdir/: bad1.hm
tests/py_tests/: test_1_buildGrammar.py  test_1_preprocessing.py  test_2_FandF.py  test_2_buildGrammar.py  test_3_FandF.py  test_3_LR1Closure.py  test_4_LR1Closure.py  test_4_parseTable.py  test_5_CETables.py  test_5_parseTable.py  test_6_CounterExamples.py  utils.py
tests/py_tests/test_descr/: test.ebnf
tests/test_execs/: calculator.cpp  regex-debug.cpp
tests/test_inputs/: calculator1.txt
